Create login, transaction list, transaction info UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">EscrowTransactReal</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_login_escrow">LoginEscrow</string>
+    <string name="title_activity_transaction_list">escrow</string>
+    <string name="title_activity_transaction_info">TransactionInfo</string>
 </resources>
